--- a/index.html
+++ b/index.html
@@ -13,17 +13,27 @@
 
         <div class="nav_bar">
 
-            <a href="">Home</a>
-            <a href="">Biography</a>
-            <a href="">Works of art</a>
-            <a href="">Team</a>
+            <a href="index.html">Home</a> 
+            <a href="biography.html">Biography</a> 
+            <a href="arts.html">Works of art</a> 
+            <a href="team.html">Team</a> 
         </div>
-
+        
         <hr>
 
-        <div>
+        <div id="home">
+            
+            <img src="" alt="">
 
+            <h2>Lorem Ipsum</h2>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti vero magnam aliquid beatae explicabo deleniti porro ad velit animi? Incidunt distinctio perspiciatis quaerat nihil saepe voluptatem alias laboriosam nesciunt odit.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos, voluptas tempora sed repellendus perferendis maiores laboriosam aliquam accusantium quidem magni iste veritatis, modi ullam, commodi illo molestiae minus perspiciatis eaque.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, et vero, cumque soluta fugit praesentium voluptatum dolorum totam tempore saepe porro odit excepturi voluptatem, ratione amet ducimus tenetur temporibus minus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam obcaecati cum blanditiis eos, optio tempora consequatur. Temporibus, corrupti est molestias at aspernatur tenetur exercitationem officiis, harum dolore, in consequatur eaque!
+            </p>
         </div>
+
     </div>
 </body>
 </html>
