--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     <div class="all">
-        
-        <h1>Van Gogh</h1>
 
         <div class="nav_bar">
 
@@ -18,7 +16,11 @@
             <a href="arts.html">Works of art</a> 
             <a href="team.html">Team</a> 
         </div>
+
+        <h1>Van</h1> 
+        <h1>Gogh</h1>
         
+        <br>
         <hr>
 
         <div id="home">
