--- a/arts.html
+++ b/arts.html
@@ -21,7 +21,7 @@
                     </li>
 
                     <li class="nav-a">
-                        <a href="biography.html">Biografia</a>
+                        <a href="biography.html">Biography</a>
                     </li>
                          
                     <li id="img-logo">
@@ -29,11 +29,11 @@
                     </li class="nav-a">
                           
                     <li class="nav-a">
-                        <a href="arts.html">Artes</a>
+                        <a href="arts.html">Arts</a>
                     </li>
 
                     <li class="nav-a">
-                        <a href="team.html">Grupo</a>
+                        <a href="team.html">Group</a>
                     </li>
                 </ul>
             </nav>
