--- a/arts.html
+++ b/arts.html
@@ -61,48 +61,89 @@
     <hr>
     
     <section>
-      <div class="card-group">
-        <div class="card">
-          <img id="card-img-top" class="mb-2 img-thumbnail" src="/style/images/noite_estrelada.png" alt="">
-          <div class="card-body">  
-            <h4 class="card-title">Título do cartão</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Subtítulo do cartão</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
-            <a class="btn btn-primary" href="">Leia mais</a>
-          </div>
-          <div class="card-footer">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      <div class="row">
+        <div class="col mb-4 mt-4 ml-4">
+          <div class="card">
+            <img src="/style/images/noite_estrelada.png" id="card-img-top" class="card-img-top" alt="/style/images/noite_estrelada.png">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
           </div>
         </div>
-        <div class="card">
-          <img id="card-img-top" class="mb-2 img-thumbnail" src="/style/images/noite_estrelada.png" alt="">
-          <div class="card-body">  
-            <h4 class="card-title">Título do cartão</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Subtítulo do cartão</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
-            <a class="btn btn-primary" href="">Leia mais</a>
-          </div>
-          <div class="card-footer">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <div class="col mb-4 mt-4">
+          <div class="card">
+            <img src="/style/images/noite_estrelada.png" id="card-img-top" class="card-img-top" alt="/style/images/noite_estrelada.png">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
           </div>
         </div>
-        <div class="card">
-          <img id="card-img-top" class="mb-2 img-thumbnail" src="/style/images/noite_estrelada.png" alt="">
-          <div class="card-body">  
-            <h4 class="card-title">Título do cartão</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Subtítulo do cartão</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
-            <a class="btn btn-primary" href="">Leia mais</a>
+        <div class="col mb-4 mt-4">
+          <div class="card">
+            <img src="/style/images/noite_estrelada.png" id="card-img-top" class="card-img-top" alt="/style/images/noite_estrelada.png">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
           </div>
-          <div class="card-footer">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+        <div class="col mb-4 mt-4 mr-4">
+          <div class="card">
+            <img src="/style/images/noite_estrelada.png" id="card-img-top" class="card-img-top" alt="/style/images/noite_estrelada.png">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <section>
-      
+      <div class="card-columns">
+        <div class="card">
+          <img src="/style/images/noite_estrelada.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/style/images/noite_estrelada.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/style/images/" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/style/images/noite_estrelada.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/style/images/noite_estrelada.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Optional JavaScript -->
