--- a/arts.html
+++ b/arts.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="container">
-        <nav class="navbar navbar-expand-lg row">
+        <nav class="navbar navbar-expand-lg navbar-expand-md row navbar-light">
           
           <div class="container p-0">
             <!-- Brand -->
@@ -29,14 +29,14 @@
             </a>
 
             <!-- Menu btn -->
-            <button class="burguer-btn navbar-toggler" data-toggle="collapse" data-target="#navbar">
+            <button class="burguer-btn dark navbar-toggler" data-toggle="collapse" data-target="#navbar">
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
 
         <!-- Nav -->
         <div id="navbar" class=" collapse navbar-collapse col-md-6">
-          <ul class="navbar-nav ml-auto align-items-center align-self-center">
+          <ul class="navbar-nav ml-auto align-items-center">
             <li class="nav-item p-2">
               <a class="nav-link text-uppercase text-monospace" href="index.html">Home</a>
             </li>
@@ -61,7 +61,7 @@
     <hr>
     
     <section>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col mb-4 mt-4 ml-4">
           <div class="card">
             <img src="/style/images/noite_estrelada.png" id="card-img-top" class="card-img-top" alt="/style/images/noite_estrelada.png">
@@ -98,49 +98,83 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
-    <section>
-      <div class="card-columns">
-        <div class="card">
-          <img src="/style/images/noite_estrelada.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <section class="m-5">
+      <div class="container">
+        <div class="card-columns row">
+          <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
+            <img src="/style/images/noite_estrelada.png" class="img-fluid ml-auto card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-monospace">Starry Night</h5>
+              <p class="card-text text-monospace"><b>Year:</b> 1889</p>
+              <p class="card-text text-monospace"><b>Medium:</b> Oil on Canvas</p>
+              <p class="card-text text-monospace"><b>Location:</b> Museum of Modern Art, New York City</p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="/style/images/noite_estrelada.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
+            <img src="/style/images/almond-blossoms.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-monospace">Almond Blossoms</h5>
+              <p class="card-text text-monospace"><b>Year:</b> 1890</p>
+              <p class="card-text text-monospace"><b>Medium:</b> Oil on Canvas</p>
+              <p class="card-text text-monospace"><b>Location:</b> 	Van Gogh Museum, Amsterdam</p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="/style/images/" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
+            <img src="/style/images/Starry_Night_Over_the_Rhone.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-monospace">Starry Night Over the Rhône</h5>
+              <p class="card-text text-monospace"><b>Year:</b> 1888</p>
+              <p class="card-text text-monospace"><b>Medium:</b> Oil on Canvas</p>
+              <p class="card-text text-monospace"><b>Location:</b> Musée d'Orsay, Paris</p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="/style/images/noite_estrelada.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
+            <img src="/style/images/Wheatfield_with_Crows.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-monospace">Wheatfield with Crows</h5>
+              <p class="card-text text-monospace"><b>Year:</b> 1890</p>
+              <p class="card-text text-monospace"><b>Medium:</b> Oil on Canvas</p>
+              <p class="card-text text-monospace"><b>Location:</b> Van Gogh Museum, Amsterdam</p>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="/style/images/noite_estrelada.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
+            <img src="/style/images/irises.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-monospace">Irises</h5>
+              <p class="card-text text-monospace"><b>Year:</b> 1889</p>
+              <p class="card-text text-monospace"><b>Medium:</b> Oil on Canvas</p>
+              <p class="card-text text-monospace"><b>Location:</b> J. Paul Getty Museum, Los Angeles, California</p>
+            </div>
+          </div>
+          <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
+            <img src="/style/images/the_potato_eaters.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-monospace">The Potato Eaters</h5>
+              <p class="card-text text-monospace"><b>Year:</b> 1885</p>
+              <p class="card-text text-monospace"><b>Medium:</b> Oil on Canvas</p>
+              <p class="card-text text-monospace"><b>Location:</b> Van Gogh Museum, Amsterdam</p>
+            </div>
+          </div>
+          <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
+            <img src="/style/images/Cafe_Terrace_at_Night.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-monospace">Café Terrace at Night</h5>
+              <p class="card-text text-monospace"><b>Year:</b> 1888</p>
+              <p class="card-text text-monospace"><b>Medium:</b> Oil on Canvas</p>
+              <p class="card-text text-monospace"><b>Location:</b> Kröller-Müller Museum, Otterlo</p>
+            </div>
+          </div>
+          <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
+            <img src="/style/images/self_portrait_van_gogh.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title text-monospace">Van Gogh self-portrait</h5>
+              <p class="card-text text-monospace"><b>Year:</b> 1889</p>
+              <p class="card-text text-monospace"><b>Medium:</b> Oil on Canvas</p>
+              <p class="card-text text-monospace"><b>Location:</b> 	Musée d'Orsay, Paris</p>
+            </div>
           </div>
         </div>
       </div>
