--- a/team.html
+++ b/team.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/style/bootstrap-4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Style CSS -->
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/0aac474d13.js" crossorigin="anonymous"></script>
     <!-- Normalize -->
-    <link rel="stylesheet" href="/style/normalize.css">
+    <link rel="stylesheet" href="./style/normalize.css">
     
     <title>Van Gogh - Team</title>
   </head>
@@ -63,7 +63,7 @@
     <section id="opacity-animation"  class="container mt-5 mb-5">
       <div class="row">
         <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-          <img src="/style/images/julio-graffiti.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+          <img src="./style/images/julio-graffiti.jpg" class="img-fluid ml-auto card-img-top" alt="...">
           <div class="card-body">
             <h5 class=" text-monospace">Julio Eduardo Januário</h5>
             <p id="color-text" class=" text-monospace"><b>RA:</b> 0040961823035</p>
@@ -72,7 +72,7 @@
           </div>
         </div> 
         <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-          <img src="/style/images//nardari-klee.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+          <img src="./style/images//nardari-klee.jpg" class="img-fluid ml-auto card-img-top" alt="...">
           <div class="card-body">
             <h5 class=" text-monospace">Gabriel Meneghel Nardari </h5>
             <p id="color-text" class=" text-monospace"><b>RA:</b> 0040961823034</p>
@@ -81,7 +81,7 @@
           </div>
         </div> 
         <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-          <img src="/style/images/gr-piccasso.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+          <img src="./style/images/gr-piccasso.jpg" class="img-fluid ml-auto card-img-top" alt="...">
           <div class="card-body">
             <h5 class=" text-monospace">Rodrigo da Silva Santos</h5>
             <p id="color-text" class=" text-monospace"><b>RA:</b> 0040961823012</p>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-          <img src="/style/images/mario-surreal.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+          <img src="./style/images/mario-surreal.jpg" class="img-fluid ml-auto card-img-top" alt="...">
           <div class="card-body">
             <h5 class=" text-monospace">Mário Vidal de Sá</h5>
             <p id="color-text" class=" text-monospace"><b>RA:</b> 0040961823036</p>
