--- a/arts.html
+++ b/arts.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/style/bootstrap-4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Style CSS -->
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/0aac474d13.js" crossorigin="anonymous"></script>
     <!-- Normalize -->
-    <link rel="stylesheet" href="/style/normalize.css">
+    <link rel="stylesheet" href="./style/normalize.css">
     
     <title>Van Gogh - Art Book</title>
   </head>
@@ -105,7 +105,7 @@
       <div class="container">
         <div class="card-columns row">
           <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-            <img src="/style/images/noite_estrelada.png" class="img-fluid ml-auto card-img-top" alt="...">
+            <img src="./style/images/noite_estrelada.png" class="img-fluid ml-auto card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title text-monospace">Starry Night</h5>
               <p id="color-text" class="card-text text-monospace"><b>Year:</b> 1889</p>
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-            <img src="/style/images/almond-blossoms.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <img src="./style/images/almond-blossoms.jpg" class="img-fluid ml-auto card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title text-monospace">Almond Blossoms</h5>
               <p id="color-text" class="card-text text-monospace"><b>Year:</b> 1890</p>
@@ -123,7 +123,7 @@
             </div>
           </div>
           <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-            <img src="/style/images/Starry_Night_Over_the_Rhone.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <img src="./style/images/Starry_Night_Over_the_Rhone.jpg" class="img-fluid ml-auto card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title text-monospace">Starry Night Over the Rhône</h5>
               <p id="color-text" class="card-text text-monospace"><b>Year:</b> 1888</p>
@@ -132,7 +132,7 @@
             </div>
           </div>
           <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-            <img src="/style/images/Wheatfield_with_Crows.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <img src="./style/images/Wheatfield_with_Crows.jpg" class="img-fluid ml-auto card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title text-monospace">Wheatfield with Crows</h5>
               <p id="color-text" class="card-text text-monospace"><b>Year:</b> 1890</p>
@@ -141,7 +141,7 @@
             </div>
           </div>
           <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-            <img src="/style/images/irises.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <img src="./style/images/irises.jpg" class="img-fluid ml-auto card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title text-monospace">Irises</h5>
               <p id="color-text" class="card-text text-monospace"><b>Year:</b> 1889</p>
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-            <img src="/style/images/the_potato_eaters.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <img src="./style/images/the_potato_eaters.jpg" class="img-fluid ml-auto card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title text-monospace">The Potato Eaters</h5>
               <p id="color-text" class="card-text text-monospace"><b>Year:</b> 1885</p>
@@ -159,7 +159,7 @@
             </div>
           </div>
           <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-            <img src="/style/images/Cafe_Terrace_at_Night.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <img src="./style/images/Cafe_Terrace_at_Night.jpg" class="img-fluid ml-auto card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title text-monospace">Café Terrace at Night</h5>
               <p id="color-text" class="card-text text-monospace"><b>Year:</b> 1888</p>
@@ -168,7 +168,7 @@
             </div>
           </div>
           <div class="card col-sm-6 col-md-4 col-xl-3 p-3">
-            <img src="/style/images/self_portrait_van_gogh.jpg" class="img-fluid ml-auto card-img-top" alt="...">
+            <img src="./style/images/self_portrait_van_gogh.jpg" class="img-fluid ml-auto card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title text-monospace">Van Gogh self-portrait</h5>
               <p id="color-text" class="card-text text-monospace"><b>Year:</b> 1889</p>
