--- a/biography.html
+++ b/biography.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/style/bootstrap-4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Style CSS -->
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/0aac474d13.js" crossorigin="anonymous"></script>
     <!-- Normalize -->
-    <link rel="stylesheet" href="/style/normalize.css">
+    <link rel="stylesheet" href="./style/normalize.css">
     
     <title>Van Gogh - Biography</title>
   </head>
@@ -64,7 +64,7 @@
 
     <section id="opacity-animation"  class="mt-5 mb-5">
       <div class="container">
-        <img id="banner-img" class="mb-5" src="/style/images/van-gogh-banner.jpg" alt="">
+        <img id="banner-img" class="mb-5" src="./style/images/van-gogh-banner.jpg" alt="">
         <h1 class="text-center text-monospace mb-5">Biography</h1>
       <p id="color-text" class="text-monospace">
         Vincent van Gogh, one of the most well-known post-impressionist artists, for whom color was the  chief symbol of expression, was born in Groot-Zundert, Holland on March 30, 1853.
